# ai_bootcamp

./: .gitignore  docker-compose.yml  project_canvas.md  pyproject.toml
notebooks/week_1/: 01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  04-RAG-Evals.ipynb
notebooks/week_3/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_5/: 01-Agent-Multi-Turn.ipynb
src/api/agent/: agents.py  graph.py  tools.py
src/api/agent/prompts/: intent_router_agent.yaml  qa_agent.yaml
src/api/api/: endpoints.py  models.py
src/api/rag/: retrieval_generation.py
src/chatbot_ui/: app.py
src/chatbot_ui/core/: config.py
