[project]
name = "00-ai-engineering-bootcamp-cohort-2"
version = "0.1.0"
description = "And your description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "langgraph>=0.6.10",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.6",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
